--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
     <section>
       <div class="header-cover">
-        <img width="100%" src="img/header-image.png" alt="" />
         <div class="large-rect">
           <div class="wrapper">
             <span>Элитные камины</span>
@@ -76,7 +75,25 @@
 
     <section>
       <div class="shops-map">
-        <img width="100%" src="img/header-image.png" alt="" />
+        <div class="squares">
+          <span>Покупайте камины</span>
+          <span class="text-red text-large">с&nbsp;максимальным  комфортом</span>
+          <span class="text-small">
+            доставка всеми возможными операторами рассчет:
+            <br/>— наличный,
+            <br/>— безналичный,
+            <br/>— оплата наложенным платежом
+          </span>
+        </div>
+        <div class="map-ukraine">
+          <span class="descr">Вы можете приобрести камины на наших складах:</span>
+        </div>
+        <div class="shops text-center">
+          <div class="shop epitsentr"></div>
+          <div class="shop novaya-liniya"></div>
+          <div class="shop leo-keramika"></div>
+          <div class="shop domus"></div>
+        </div>
       </div>
     </section>
 
