--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <section>
       <div class="shops-map">
-        <div class="squares">
+        <div class="map-squares">
           <span>Покупайте камины</span>
           <span class="text-red text-large">с&nbsp;максимальным  комфортом</span>
           <span class="text-small">
@@ -100,7 +100,6 @@
 
     <section>
       <div class="slider-section">
-
         <div class="swiper-container h100p">
           <ul class="swiper-wrapper text-center">
             <li class="swiper-slide">
@@ -157,7 +156,76 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
+      </div>
+    </section>
 
+    <section>
+      <div class="get-catalog">
+        <div class="catalog-squares">
+          <span>Являетесь постоянным<br/>клиентом нашей компании?</span>
+          <span class="text-red text-large">Оформите заявку прямо сейчас и получите скидку до 8000 грн.</span>
+          <span class="text-small">
+            *скидка зависит от вида камина
+          </span>
+        </div>
+        <div class="catalog-form">
+          <form action="" method="post">
+            <div class="row">
+              <input name="yourName" class="input w100p" placeholder="Ваше имя" />
+            </div>
+            <div class="row">
+              <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" required />
+            </div>
+            <div class="row">
+              <button type="submit" class="btn w100p">получить каталог</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="request-callback">
+        <div class="callback-title text-red text-center text-size-40px text-bold">
+          Почему мы являемся выбором №1
+        </div>
+        <div class="callback-subtitle text-center text-size-30px">
+          для наших покупателей и бизнес партнеров более 20 лет?
+        </div>
+        <div class="callback-diamonds">
+          <div class="diamond-wrapper">
+            <div class="callback-diamond">
+              <div class="diamond-photo" style="background-image: url('img/callback-01.png');"></div>
+            </div>
+            <div class="diamond-descr">
+              Более 50 комплектов каминов в постоянном наличии
+            </div>
+          </div>
+          <div class="diamond-wrapper">
+            <div class="callback-diamond">
+              <div class="diamond-photo" style="background-image: url('img/callback-02.png');"></div>
+            </div>
+            <div class="diamond-descr">
+              В наличии все виды  каминов предложенные на нашем сайте
+            </div>
+          </div>
+          <div class="diamond-wrapper">
+            <div class="callback-diamond">
+              <div class="diamond-photo" style="background-image: url('img/callback-03.png');"></div>
+            </div>
+            <div class="diamond-descr">
+              Мы предоставляем  консультации повыбору каминов, помощь в монтаже силами наших монтажников
+            </div>
+          </div>
+          <div class="diamond-wrapper">
+            <div class="callback-diamond">
+              <div class="diamond-photo" style="background-image: url('img/callback-04.png');"></div>
+            </div>
+            <div class="diamond-descr">
+              Производство собственными силами. Возможность обеспечить необходимым объемом в течении 3-х дней
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
