--- a/index.html
+++ b/index.html
@@ -225,6 +225,16 @@
               Производство собственными силами. Возможность обеспечить необходимым объемом в течении 3-х дней
             </div>
           </div>
+          <div class="callback-notice">*Возможен возврат или обмен поврежденного товара</div>
+          <div class="btn">ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="reviews">
+        <div class="reviews-partners">
+          <div class="reviews-title text-center">наши партнеры</div>
         </div>
       </div>
     </section>
