--- a/index.html
+++ b/index.html
@@ -236,6 +236,62 @@
         <div class="reviews-partners">
           <div class="reviews-title text-center">наши партнеры</div>
         </div>
+        <div class="reviews-square">
+          <span>отзывы наших</span>
+          <span class="text-red text-large">покупателей</span>
+          <div class="reviews-pagination"></div>
+        </div>
+        <div class="rewiews-slider">
+          <div class="swiper-container h100p">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide">
+                <div class="slide-contents">
+                  <p class="comment text-size-18px">
+                    Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил,
+                    что он у себя в постели превратился в страшное насекомое. Лежа на
+                    панцирнотвердой спине, он видел, стоило ему приподнять голову, свой
+                    коричневый, выпуклый, разделенный дугообразными чешуйками живот, на
+                    верхужке которого еле держалось готовое вот-вот окончательно сползти
+                    одеяло.
+                  </p>
+                  <p class="author-name text-red text-size-18px">— Максим Сальников</p>
+                  <p class="author-company text-size-14px">ООО «Ферес», г. Одесса</p>
+                  <i class="author-photo" style="background-image: url('img/avatars/avatar-01.png');"></i>
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="slide-contents">
+                  <p class="comment text-size-18px">
+                    Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил,
+                    что он у себя в постели превратился в страшное насекомое. Лежа на
+                    панцирнотвердой спине, он видел, стоило ему приподнять голову, свой
+                    коричневый, выпуклый, разделенный дугообразными чешуйками живот, на
+                    верхужке которого еле держалось готовое вот-вот окончательно сползти
+                    одеяло.
+                  </p>
+                  <p class="author-name text-red text-size-18px">— Максим Сальников</p>
+                  <p class="author-company text-size-14px">ООО «Ферес», г. Одесса</p>
+                  <i class="author-photo" style="background-image: url('img/avatars/avatar-01.png');"></i>
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="slide-contents">
+                  <p class="comment text-size-18px">
+                    Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил,
+                    что он у себя в постели превратился в страшное насекомое. Лежа на
+                    панцирнотвердой спине, он видел, стоило ему приподнять голову, свой
+                    коричневый, выпуклый, разделенный дугообразными чешуйками живот, на
+                    верхужке которого еле держалось готовое вот-вот окончательно сползти
+                    одеяло.
+                  </p>
+                  <p class="author-name text-red text-size-18px">— Максим Сальников</p>
+                  <p class="author-company text-size-14px">ООО «Ферес», г. Одесса</p>
+                  <i class="author-photo" style="background-image: url('img/avatars/avatar-01.png');"></i>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
