--- a/index.html
+++ b/index.html
@@ -235,6 +235,23 @@
       <div class="reviews">
         <div class="reviews-partners">
           <div class="reviews-title text-center">наши партнеры</div>
+          <div class="our-partners">
+            <div class="partner">
+              <img src="img/partners/kan.png" alt="Kan" />
+            </div>
+            <div class="partner">
+              <img src="img/partners/kadorr-group.png" alt="Kadorr Group" />
+            </div>
+            <div class="partner">
+              <img src="img/partners/gefest.png" alt="Гефест" />
+            </div>
+            <div class="partner">
+              <img src="img/partners/kan.png" alt="Kan" />
+            </div>
+            <div class="partner">
+              <img src="img/partners/kadorr-group.png" alt="Kadorr Group" />
+            </div>
+          </div>
         </div>
         <div class="reviews-square">
           <span>отзывы наших</span>
