--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/main.js" defer></script>
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script>
+    <!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script> -->
   </head>
   <body>
     <header>
@@ -321,6 +321,26 @@
           <button class="btn">Оставить заявку</button>
         </div>
         <div class="hand"></div>
+      </div>
+    </section>
+
+    <section class="popup-wrapper">
+      <div class="buy-now">
+        <div class="title text-red">Закажите прямо<br/>сейчас!</div>
+        <div class="descr">Являетесь постоянным клиентом нашей компании?</div>
+        <div class="popup-form clear">
+          <form action="" method="post">
+            <div class="row left">
+              <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" required="" />
+            </div>
+            <div class="row right">
+              <input name="yourName" class="input w100p" placeholder="Ваше имя" required="" />
+            </div>
+            <div class="row">
+              <button type="submit" class="btn w100p">получить каталог</button>
+            </div>
+          </form>
+        </div>
       </div>
     </section>
 
