--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/main.js" defer></script>
-    <!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script> -->
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script>
   </head>
   <body>
     <header>
@@ -35,7 +35,7 @@
         </nav>
         <div class="phone-section text-right h100p">
           <a class="phone" href="tel:+380635023645">(063) 502-36-45</a>
-          <a class="callback" href="#">заказать звонок</a>
+          <a class="callback popup-open" href="#">заказать звонок</a>
         </div>
       </div>
     </header>
@@ -146,7 +146,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold">25.56<span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order btn right">
+                    <div class="product-order popup-open btn right">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="callback-notice">*Возможен возврат или обмен поврежденного товара</div>
-          <div class="btn">ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</div>
+          <div class="btn popup-open">ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</div>
         </div>
       </div>
     </section>
@@ -318,28 +318,41 @@
         <div class="text-red ask-question-title">остались вопросы?</div>
         <div class="ask-question-request">
           <span>Оставьте заявку и наш менеджер свяжется с Вами в течении 15 минут!</span>
-          <button class="btn">Оставить заявку</button>
+          <button class="btn popup-open">Оставить заявку</button>
         </div>
         <div class="hand"></div>
       </div>
     </section>
 
-    <section class="popup-wrapper">
-      <div class="buy-now">
-        <div class="title text-red">Закажите прямо<br/>сейчас!</div>
-        <div class="descr">Являетесь постоянным клиентом нашей компании?</div>
-        <div class="popup-form clear">
-          <form action="" method="post">
-            <div class="row left">
-              <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" required="" />
-            </div>
-            <div class="row right">
-              <input name="yourName" class="input w100p" placeholder="Ваше имя" required="" />
-            </div>
-            <div class="row">
-              <button type="submit" class="btn w100p">получить каталог</button>
-            </div>
-          </form>
+    <section class="popup-wrapper popup-1 invisible" style="display: none;">
+      <div class="popup">
+        <div class="popup-contents">
+          <div class="popup-close text-red">✖</div>
+          <div class="title text-red">Закажите прямо<br/>сейчас!</div>
+          <div class="descr">Являетесь постоянным клиентом нашей компании?</div>
+          <div class="popup-form clear">
+            <form id="get-catalog-form" action="" method="post">
+              <div class="row left">
+                <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" />
+              </div>
+              <div class="row right">
+                <input name="yourName" class="input w100p" placeholder="Ваше имя" />
+              </div>
+              <div class="row">
+                <button type="submit" class="btn w100p">получить каталог</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="popup-wrapper popup-2 invisible" style="display: none;">
+      <div class="popup">
+        <div class="popup-contents">
+          <div class="popup-close text-red">✖</div>
+          <div class="title text-red">Спасибо за вашу заявку!</div>
+          <div class="descr">в ближайшее время, наш менеджер свяжется с вами!</div>
         </div>
       </div>
     </section>
@@ -353,7 +366,7 @@
           <div class="telephone">
             <a href="tel:+380635023645">(063) 502-36-45</a>
           </div>
-          <div class="btn">связаться с нами</div>
+          <div class="btn popup-open">связаться с нами</div>
           <div class="socials">
             <div class="title">Мы в социальных сетях:</div>
             <ul>
