--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/main.js" defer></script>
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script>
+    <!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script> -->
   </head>
   <body>
     <header>
@@ -104,6 +104,7 @@
         <div class="swiper-container h100p">
           <span class="title text-center">Наши клиенты покупают камины с 1993 года!</span>
           <ul class="swiper-wrapper text-center">
+            <!-- Slide data begin -->
             <li class="swiper-slide">
               <div class="slide-contents clear">
                 <div class="product-preview clear left">
@@ -153,6 +154,59 @@
                 </div>
               </div>
             </li>
+            <!-- Slide data end -->
+
+            <!-- Slide data begin -->
+            <li class="swiper-slide">
+              <div class="slide-contents clear">
+                <div class="product-preview clear left">
+                  <div class="product-thumbs left">
+                    <div class="product-thumb active">
+                      <img src="img/product/product-01.png" alt="" />
+                    </div>
+                    <div class="product-thumb">
+                      <img src="img/product/product-02.png" alt="" />
+                    </div>
+                    <div class="product-thumb">
+                      <img src="img/product/product-03.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="product-photo right">
+                    <img src="img/product/product-01.png" alt="" />
+                  </div>
+                </div>
+                <div class="product-descr text-left left">
+                  <div class="product-title text-red">Камин Empire</div>
+                  <div class="product-brand text-size-20px text-bold">Crema Siena</div>
+                  <div class="product-about">
+                    <h2 class="text-size-20px">Описание камина:</h2>
+                    <p class="text-size-14px">
+                      Ванная комната - место для релаксации, приведения душевного и физического состояния тела в тонус.<br/>
+                      Мозаика Desert Oasis придаса новых стилевых ноток помещению.<br/>
+                      Также возможны поставки плитки керамической, керамогранита, клинкера всех значимых фабрик мира (Испания, Италия, Китай).
+                    </p>
+                  </div>
+                  <div class="product-sizes text-size-20px">
+                    <h2>Доступные размеры:</h2>
+                    <div class="product-size">10х10х6 мм</div>
+                    <div class="product-size">15х15х6 мм</div>
+                    <div class="product-size">23х23х6 мм</div>
+                    <div class="product-size">47х47х6 мм</div>
+                    <div class="product-size">МКР - ХС</div>
+                  </div>
+                  <div class="product-price-order clear">
+                    <div class="product-price left">
+                      <span class="text-size-20px">Цена:</span>
+                      <span class="text-size-28px text-bold">25.56<span> <span class="text-size-20px text-bold">UAH</span>
+                    </div>
+                    <div class="product-order popup-open btn right">
+                      заказать прямо сейчас
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <!-- Slide data end -->
           </ul>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
