--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <div class="wrapper h100p clear">
+      <div class="header-wrapper h100p clear">
         <a class="logo h100p" href="#">
           <img width="100%" src="img/logo.png" alt="Rittershaus" />
         </a>
