--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/main.js" defer></script>
-    <!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script> -->
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script>
   </head>
   <body>
     <header>
@@ -248,33 +248,41 @@
           для наших покупателей и бизнес партнеров более 20 лет?
         </div>
         <div class="callback-diamonds">
-          <div class="diamond-wrapper">
-            <div class="callback-diamond">
-              <div class="diamond-photo" style="background-image: url('img/callback-01.png');"></div>
+          <div class="diamond-container">
+            <div class="diamond-wrapper">
+              <div class="callback-diamond">
+                <div class="diamond-photo" style="background-image: url('img/callback-01.png');"></div>
+              </div>
             </div>
             <div class="diamond-descr">
               Более 50 комплектов каминов в постоянном наличии
             </div>
           </div>
-          <div class="diamond-wrapper">
-            <div class="callback-diamond">
-              <div class="diamond-photo" style="background-image: url('img/callback-02.png');"></div>
+          <div class="diamond-container">
+            <div class="diamond-wrapper">
+              <div class="callback-diamond">
+                <div class="diamond-photo" style="background-image: url('img/callback-02.png');"></div>
+              </div>
             </div>
             <div class="diamond-descr">
               В наличии все виды  каминов предложенные на нашем сайте
             </div>
           </div>
-          <div class="diamond-wrapper">
-            <div class="callback-diamond">
-              <div class="diamond-photo" style="background-image: url('img/callback-03.png');"></div>
+          <div class="diamond-container">
+            <div class="diamond-wrapper">
+              <div class="callback-diamond">
+                <div class="diamond-photo" style="background-image: url('img/callback-03.png');"></div>
+              </div>
             </div>
             <div class="diamond-descr">
               Мы предоставляем  консультации повыбору каминов, помощь в монтаже силами наших монтажников
             </div>
           </div>
-          <div class="diamond-wrapper">
-            <div class="callback-diamond">
-              <div class="diamond-photo" style="background-image: url('img/callback-04.png');"></div>
+          <div class="diamond-container">
+            <div class="diamond-wrapper">
+              <div class="callback-diamond">
+                <div class="diamond-photo" style="background-image: url('img/callback-04.png');"></div>
+              </div>
             </div>
             <div class="diamond-descr">
               Производство собственными силами. Возможность обеспечить необходимым объемом в течении 3-х дней
