--- a/index.html
+++ b/index.html
@@ -107,23 +107,7 @@
             <!-- Slide data begin -->
             <li class="swiper-slide">
               <div class="slide-contents clear">
-                <div class="product-preview clear left">
-                  <div class="product-thumbs left">
-                    <div class="product-thumb active">
-                      <img src="img/product/product-01.png" alt="" />
-                    </div>
-                    <div class="product-thumb">
-                      <img src="img/product/product-02.png" alt="" />
-                    </div>
-                    <div class="product-thumb">
-                      <img src="img/product/product-03.png" alt="" />
-                    </div>
-                  </div>
-                  <div class="product-photo right">
-                    <img src="img/product/product-01.png" alt="" />
-                  </div>
-                </div>
-                <div class="product-descr text-left left">
+                <div class="product-descr text-left right">
                   <div class="product-title text-red">Камин Empire</div>
                   <div class="product-brand text-size-20px text-bold">Crema Siena</div>
                   <div class="product-about">
@@ -149,6 +133,22 @@
                     </div>
                     <div class="product-order popup-open btn right">
                       заказать прямо сейчас
+                    </div>
+                  </div>
+                </div>
+                <div class="product-preview clear right">
+                  <div class="product-photo right">
+                    <img src="img/product/product-01.png" alt="" />
+                  </div>
+                  <div class="product-thumbs right">
+                    <div class="product-thumb active">
+                      <img src="img/product/product-01.png" alt="" />
+                    </div>
+                    <div class="product-thumb">
+                      <img src="img/product/product-02.png" alt="" />
+                    </div>
+                    <div class="product-thumb">
+                      <img src="img/product/product-03.png" alt="" />
                     </div>
                   </div>
                 </div>
@@ -159,23 +159,7 @@
             <!-- Slide data begin -->
             <li class="swiper-slide">
               <div class="slide-contents clear">
-                <div class="product-preview clear left">
-                  <div class="product-thumbs left">
-                    <div class="product-thumb active">
-                      <img src="img/product/product-01.png" alt="" />
-                    </div>
-                    <div class="product-thumb">
-                      <img src="img/product/product-02.png" alt="" />
-                    </div>
-                    <div class="product-thumb">
-                      <img src="img/product/product-03.png" alt="" />
-                    </div>
-                  </div>
-                  <div class="product-photo right">
-                    <img src="img/product/product-01.png" alt="" />
-                  </div>
-                </div>
-                <div class="product-descr text-left left">
+                <div class="product-descr text-left right">
                   <div class="product-title text-red">Камин Empire</div>
                   <div class="product-brand text-size-20px text-bold">Crema Siena</div>
                   <div class="product-about">
@@ -201,6 +185,22 @@
                     </div>
                     <div class="product-order popup-open btn right">
                       заказать прямо сейчас
+                    </div>
+                  </div>
+                </div>
+                <div class="product-preview clear right">
+                  <div class="product-photo right">
+                    <img src="img/product/product-01.png" alt="" />
+                  </div>
+                  <div class="product-thumbs right">
+                    <div class="product-thumb active">
+                      <img src="img/product/product-01.png" alt="" />
+                    </div>
+                    <div class="product-thumb">
+                      <img src="img/product/product-02.png" alt="" />
+                    </div>
+                    <div class="product-thumb">
+                      <img src="img/product/product-03.png" alt="" />
                     </div>
                   </div>
                 </div>
