--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         </a>
         <nav class="menu h100p">
           <div class="menu-item">
-            <a href="#">Ассортимент</a>
+            <a href="#range">Ассортимент</a>
           </div>
           <div class="menu-item">
-            <a href="#">о нас</a>
+            <a href="#partners">о нас</a>
           </div>
           <div class="menu-item">
-            <a href="#">наш сервис</a>
+            <a href="#service">наш сервис</a>
           </div>
           <div class="menu-item">
-            <a href="#">Контакты</a>
+            <a href="#contacts">Контакты</a>
           </div>
         </nav>
         <div class="phone-section text-right h100p">
@@ -99,7 +99,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="range">
       <div class="slider-section">
         <div class="swiper-container h100p">
           <span class="title text-center">Наши клиенты покупают камины с 1993 года!</span>
@@ -239,7 +239,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="service">
       <div class="request-callback">
         <div class="callback-title text-red text-center text-size-40px text-bold">
           Почему мы являемся выбором №1
@@ -294,7 +294,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="partners">
       <div class="reviews">
         <div class="reviews-partners">
           <div class="reviews-title text-center">наши партнеры</div>
@@ -389,7 +389,7 @@
     <section class="popup-wrapper popup-1 invisible" style="display: none;">
       <div class="popup">
         <div class="popup-contents">
-          <div class="popup-close text-red">✖</div>
+          <div class="popup-close"></div>
           <div class="title text-red">Закажите прямо<br/>сейчас!</div>
           <div class="descr">Являетесь постоянным клиентом нашей компании?</div>
           <div class="popup-form clear">
@@ -412,14 +412,15 @@
     <section class="popup-wrapper popup-2 invisible" style="display: none;">
       <div class="popup">
         <div class="popup-contents">
-          <div class="popup-close text-red">✖</div>
+          <!-- <div class="popup-close text-red">✖</div> -->
+          <div class="popup-close"></div>
           <div class="title text-red">Спасибо за вашу заявку!</div>
           <div class="descr">в ближайшее время, наш менеджер свяжется с вами!</div>
         </div>
       </div>
     </section>
 
-    <footer>
+    <footer id="contacts">
       <div class="footer-wrapper">
         <div id="map" class="footer-map"></div>
         <div class="footer-contacts">
