--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/main.js" defer></script>
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script>
+    <!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyAQd8ifFv5_cNqRZ0oFtizulSNbruyuFas&callback=initMap" async defer></script> -->
   </head>
   <body>
     <header>
@@ -128,16 +128,16 @@
                   </div>
                   <div class="product-sizes text-size-20px">
                     <h2>Доступные размеры:</h2>
-                    <div class="product-size">10х10х6 мм</div>
-                    <div class="product-size">15х15х6 мм</div>
-                    <div class="product-size">23х23х6 мм</div>
-                    <div class="product-size">47х47х6 мм</div>
-                    <div class="product-size">МКР - ХС</div>
+                    <div class="product-size" data-price="25.56">10х10х6 мм</div>
+                    <div class="product-size" data-price="24.56">15х15х6 мм</div>
+                    <div class="product-size" data-price="23.56">23х23х6 мм</div>
+                    <div class="product-size" data-price="22.56">47х47х6 мм</div>
+                    <div class="product-size" data-price="21.56">МКР - ХС</div>
                   </div>
                   <div class="product-price-order clear">
                     <div class="product-price left">
                       <span class="text-size-20px">Цена:</span>
-                      <span class="text-size-28px text-bold">25.56<span> <span class="text-size-20px text-bold">UAH</span>
+                      <span class="text-size-28px text-bold price">25.56</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
                     <div class="product-order popup-open btn right">
                       заказать прямо сейчас
@@ -180,16 +180,16 @@
                   </div>
                   <div class="product-sizes text-size-20px">
                     <h2>Доступные размеры:</h2>
-                    <div class="product-size">10х10х6 мм</div>
-                    <div class="product-size">15х15х6 мм</div>
-                    <div class="product-size">23х23х6 мм</div>
-                    <div class="product-size">47х47х6 мм</div>
-                    <div class="product-size">МКР - ХС</div>
+                    <div class="product-size" data-price="25.56">10х10х6 мм</div>
+                    <div class="product-size" data-price="24.56">15х15х6 мм</div>
+                    <div class="product-size" data-price="23.56">23х23х6 мм</div>
+                    <div class="product-size" data-price="22.56">47х47х6 мм</div>
+                    <div class="product-size" data-price="21.56">МКР - ХС</div>
                   </div>
                   <div class="product-price-order clear">
                     <div class="product-price left">
                       <span class="text-size-20px">Цена:</span>
-                      <span class="text-size-28px text-bold">25.56<span> <span class="text-size-20px text-bold">UAH</span>
+                      <span class="text-size-28px text-bold price">25.56</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
                     <div class="product-order popup-open btn right">
                       заказать прямо сейчас
