--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   </div>
                   <div class="product-sizes text-size-20px">
                     <h2>Доступные размеры:</h2>
-                    <div class="product-size" data-price="25.56">10х10х6 мм</div>
+                    <div class="product-size active" data-price="25.56">10х10х6 мм</div>
                     <div class="product-size" data-price="24.56">15х15х6 мм</div>
                     <div class="product-size" data-price="23.56">23х23х6 мм</div>
                     <div class="product-size" data-price="22.56">47х47х6 мм</div>
@@ -180,7 +180,7 @@
                   </div>
                   <div class="product-sizes text-size-20px">
                     <h2>Доступные размеры:</h2>
-                    <div class="product-size" data-price="25.56">10х10х6 мм</div>
+                    <div class="product-size active" data-price="25.56">10х10х6 мм</div>
                     <div class="product-size" data-price="24.56">15х15х6 мм</div>
                     <div class="product-size" data-price="23.56">23х23х6 мм</div>
                     <div class="product-size" data-price="22.56">47х47х6 мм</div>
