--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
         <div class="rects-wrapper">
           <div class="small-rect">
             <span>больше</span>
-            <span class="text-large text-red">20 лет</span>
+            <span class="text-large brand-color">20 лет</span>
             <span class="text-small">на рынке страны</span>
           </div>
           <div class="small-rect">
             <span>гарантия</span>
-            <span class="text-large text-red">36</span>
+            <span class="text-large brand-color">36</span>
             <span class="text-small">месяцев</span>
           </div>
           <div class="small-rect">
             <span>доставка до</span>
-            <span class="text-large text-red">3<i class="text-small">X</i> дней</span>
+            <span class="text-large brand-color">3<i class="text-small">X</i> дней</span>
             <span class="text-small">в любую точку<br/>страны</span>
           </div>
           <div class="small-rect">
             <span>постоянное</span>
-            <span class="text-large text-x-large text-red">&infin;</span>
+            <span class="text-large text-x-large brand-color">&infin;</span>
             <span class="text-small">наличие<br/>на складе</span>
           </div>
         </div>
@@ -86,7 +86,7 @@
       <div class="shops-map">
         <div class="map-squares">
           <span>Покупайте камины</span>
-          <span class="text-red text-large">с&nbsp;максимальным  комфортом</span>
+          <span class="brand-color text-large">с&nbsp;максимальным  комфортом</span>
           <span class="text-small">
             доставка всеми возможными операторами рассчет:
             <br/>— наличный,
@@ -116,7 +116,7 @@
             <li class="swiper-slide">
               <div class="slide-contents clear">
                 <div class="product-descr text-left right">
-                  <div class="product-title text-red">Камин Empire</div>
+                  <div class="product-title brand-color">Камин Empire</div>
                   <div class="product-brand text-size-20px text-bold">Crema Siena</div>
                   <div class="product-about">
                     <h2 class="text-size-20px">Описание камина:</h2>
@@ -168,7 +168,7 @@
             <li class="swiper-slide">
               <div class="slide-contents clear">
                 <div class="product-descr text-left right">
-                  <div class="product-title text-red">Камин Empire</div>
+                  <div class="product-title brand-color">Камин Empire</div>
                   <div class="product-brand text-size-20px text-bold">Crema Siena</div>
                   <div class="product-about">
                     <h2 class="text-size-20px">Описание камина:</h2>
@@ -226,18 +226,18 @@
       <div class="get-catalog">
         <div class="catalog-squares">
           <span>Являетесь постоянным<br/>клиентом нашей компании?</span>
-          <span class="text-red text-large">Оформите заявку прямо сейчас и получите скидку до 8000 грн.</span>
+          <span class="brand-color text-large">Оформите заявку прямо сейчас и получите скидку до 8000 грн.</span>
           <span class="text-small">
             *скидка зависит от вида камина
           </span>
         </div>
         <div class="catalog-form">
-          <form action="" method="post">
+          <form id="get-catalog-form" action="" method="post">
             <div class="row">
               <input name="yourName" class="input w100p" placeholder="Ваше имя" />
             </div>
             <div class="row">
-              <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" required />
+              <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" maxlength="13" />
             </div>
             <div class="row">
               <button type="submit" class="btn w100p">получить каталог</button>
@@ -249,7 +249,7 @@
 
     <section id="service">
       <div class="request-callback">
-        <div class="callback-title text-red text-center text-size-40px text-bold">
+        <div class="callback-title brand-color text-center text-size-40px text-bold">
           Почему мы являемся выбором №1
         </div>
         <div class="callback-subtitle text-center text-size-30px">
@@ -326,7 +326,7 @@
         </div>
         <div class="reviews-square">
           <span>отзывы наших</span>
-          <span class="text-red text-large">покупателей</span>
+          <span class="brand-color text-large">покупателей</span>
           <div class="reviews-pagination"></div>
         </div>
         <div class="rewiews-slider">
@@ -342,7 +342,7 @@
                     верхужке которого еле держалось готовое вот-вот окончательно сползти
                     одеяло.
                   </p>
-                  <p class="author-name text-red text-size-18px">— Максим Сальников</p>
+                  <p class="author-name brand-color text-size-18px">— Максим Сальников</p>
                   <p class="author-company text-size-14px">ООО «Ферес», г. Одесса</p>
                   <i class="author-photo" style="background-image: url('img/avatars/avatar-01.png');"></i>
                 </div>
@@ -357,7 +357,7 @@
                     верхужке которого еле держалось готовое вот-вот окончательно сползти
                     одеяло.
                   </p>
-                  <p class="author-name text-red text-size-18px">— Максим Сальников</p>
+                  <p class="author-name brand-color text-size-18px">— Максим Сальников</p>
                   <p class="author-company text-size-14px">ООО «Ферес», г. Одесса</p>
                   <i class="author-photo" style="background-image: url('img/avatars/avatar-01.png');"></i>
                 </div>
@@ -372,7 +372,7 @@
                     верхужке которого еле держалось готовое вот-вот окончательно сползти
                     одеяло.
                   </p>
-                  <p class="author-name text-red text-size-18px">— Максим Сальников</p>
+                  <p class="author-name brand-color text-size-18px">— Максим Сальников</p>
                   <p class="author-company text-size-14px">ООО «Ферес», г. Одесса</p>
                   <i class="author-photo" style="background-image: url('img/avatars/avatar-01.png');"></i>
                 </div>
@@ -385,7 +385,7 @@
 
     <section>
       <div class="ask-question">
-        <div class="text-red ask-question-title">остались вопросы?</div>
+        <div class="brand-color ask-question-title">остались вопросы?</div>
         <div class="ask-question-request">
           <span>Оставьте заявку и наш менеджер свяжется с Вами в течении 15 минут!</span>
           <button class="btn popup-open">Оставить заявку</button>
@@ -398,12 +398,13 @@
       <div class="popup">
         <div class="popup-contents">
           <div class="popup-close"></div>
-          <div class="title text-red">Закажите прямо<br/>сейчас!</div>
+          <div class="title brand-color">Закажите прямо<br/>сейчас!</div>
           <div class="descr">Являетесь постоянным клиентом нашей компании?</div>
           <div class="popup-form clear">
-            <form id="get-catalog-form" action="" method="post">
+            <form id="request-now-form" action="" method="post">
               <div class="row left">
-                <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" />
+                <input name="contactPhone" class="input w100p" placeholder="Контактный телефон" maxlength="13" />
+                <div class="error">* неверный формат номера телефона</div>
               </div>
               <div class="row right">
                 <input name="yourName" class="input w100p" placeholder="Ваше имя" />
@@ -420,9 +421,9 @@
     <section class="popup-wrapper popup-2 invisible" style="display: none;">
       <div class="popup">
         <div class="popup-contents">
-          <!-- <div class="popup-close text-red">✖</div> -->
+          <!-- <div class="popup-close brand-color">✖</div> -->
           <div class="popup-close"></div>
-          <div class="title text-red">Спасибо за вашу заявку!</div>
+          <div class="title brand-color">Спасибо за вашу заявку!</div>
           <div class="descr">в ближайшее время, наш менеджер свяжется с вами!</div>
         </div>
       </div>
