--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">27199</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -178,7 +178,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">32299</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -220,7 +220,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">36499</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -262,7 +262,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">26799</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -305,7 +305,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">33599</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -348,7 +348,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">39999</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -391,7 +391,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">43999</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -432,7 +432,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">31499</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -474,7 +474,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">75999</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -517,7 +517,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">77999</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -559,7 +559,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">87499</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -602,7 +602,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">73199</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -649,7 +649,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">26699</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -690,7 +690,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">31599</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -732,7 +732,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">32399</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -774,7 +774,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">24399</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -817,7 +817,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">29399</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -860,7 +860,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">34499</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -903,7 +903,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">37999</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
@@ -944,7 +944,7 @@
                       <span class="text-size-20px">Цена:</span>
                       <span class="text-size-28px text-bold price">27999</span> <span class="text-size-20px text-bold">UAH</span>
                     </div>
-                    <div class="product-order popup-open btn right">
+                    <div class="product-order popup-open btn right" data-role="buy">
                       заказать прямо сейчас
                     </div>
                   </div>
